--- a/src/main/resources/templates/submission/list.html
+++ b/src/main/resources/templates/submission/list.html
@@ -82,7 +82,8 @@
                         <td th:text="${#dates.format(new java.util.Date(new Long(sbm.submitTime)),'yyyy-MM-dd HH:mm:ss')}"></td>
                         <td>已处理</td>
                         <td>
-                            <a class="btn btn-sm btn-success text-white">查看详情</a>
+                            <!--<a class="btn btn-sm btn-primary" th:href="@{/emp/}+${emp.id}">编辑</a>-->
+                            <a class="btn btn-sm btn-success text-white" th:href="@{/submission/}+${sbm.id}">查看详情</a>
                             <button class="btn btn-sm btn-danger deleteBtn">删除</button>
                         </td>
                     </tr>
