commit by lewy 5/9

--- a/src/main/resources/templates/submission/list.html
+++ b/src/main/resources/templates/submission/list.html
@@ -55,10 +55,11 @@
                     </tbody>
                 </table>
             </div>
-        </main>
+            <br/>
+        <!--</main>-->
 
         <!-- 已处理的试卷 -->
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+        <!--<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">-->
             <h2>这是您历史处理的试卷</h2>
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
