--- a/src/main/resources/templates/item/index.html
+++ b/src/main/resources/templates/item/index.html
@@ -26,9 +26,40 @@
             <!-- 隐藏域传值 -->
             <input id="iph1" type="hidden" name="paperCode" th:value="${subItem.getPaper().paperCode}"/>
             <input id="iph2" type="hidden" name="createTime" th:value="${subItem.submitTime}"/>
-            <h2>这是您查看的试卷</h2>
-            <!-- 为 ECharts 准备一个具备大小（宽高）的 DOM -->
+            <h2>这是您于<span th:text="${#dates.format(new java.util.Date(new Long(paperIndex.createTime)),'yyyy-MM-dd HH:mm:ss')}"></span>提交的编号为<span th:text="${paperIndex.paperCode}"></span>的试卷</h2>
+            <div class="table-responsive">
+                <table class="table table-striped table-sm">
+                    <thead>
+                    <tr>
+                        <th>最高分</th>
+                        <th>最低分</th>
+                        <th>平均分</th>
+                        <th>方差</th>
+                        <th>标准差</th>
+                        <th>难度指标</th>
+                        <th>区分度指标</th>
+                        <th>信度指标</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td th:text="${paperIndex.maxScore}"></td>
+                        <td th:text="${paperIndex.minScore}"></td>
+                        <td th:text="${paperIndex.avgScore}"></td>
+                        <td th:text="${paperIndex.fcScore}"></td>
+                        <td th:text="${paperIndex.bzcScore}"></td>
+                        <td th:text="${paperIndex.nandu}"></td>
+                        <td th:text="${paperIndex.qufendu}"></td>
+                        <td th:text="${paperIndex.xindu}"></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
             <h4>第一部分：学生得分情况</h4>
+            <!-- 为 ECharts 准备一个具备大小（宽高）的 DOM -->
+            <div id="totalScoreBar"
+                 style="width: 600px;height:400px; margin: 0 auto;"></div>
             <br/>
             <h4>第二部分：试题指标情况</h4>
             <!-- 难度分布 -->
@@ -64,9 +95,9 @@
                     <thead>
                     <tr>
                         <th width="10%">簇序号</th>
-                        <th width="60%">学生学号</th>
-                        <th width="15%">擅长试题</th>
-                        <th width="15%">不擅长试题</th>
+                        <th width="50%">学生学号</th>
+                        <th width="20%">擅长试题</th>
+                        <th width="20%">不擅长试题</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -93,11 +124,83 @@
         console.log(ctime);
         var source = {"paperCode":pcode, "createTime":ctime};
         //console.log(source);
+        //总分展示
+        getTotalScore(source);
         //难度展示
         getItemNandu(source);
         //区分度展示
         getItemQufendu(source);
     });
+
+    function getTotalScore(source) {
+
+        $.ajax({
+            type: 'get',
+            dataType: 'text',
+            url: '/iaw/item/totalScore',
+            data: source,
+            cache: false,
+            async: true,
+            success: function (result) {
+                console.log(result);
+                var xqo = eval('(' + result + ')');
+                var renshu = new Array(String);
+                for(var i in xqo){
+                    console.log(xqo[i].tsCount);
+                    renshu.push(xqo[i].tsCount)
+                }
+                renshu.shift();
+                console.log(renshu);
+
+                // 基于准备好的dom，初始化echarts实例
+                var myChart = echarts.init(document.getElementById('totalScoreBar'));
+
+                var option = {
+                    title: {
+                        text: '学生总得分分布图',
+                        x: 'center'
+                    },
+                    color: ['#3398DB'],
+                    tooltip : {
+                        trigger: 'axis',
+                        axisPointer : {            // 坐标轴指示器，坐标轴触发有效
+                            type : 'shadow'        // 默认为直线，可选为：'line' | 'shadow'
+                        }
+                    },
+                    grid: {
+                        left: '3%',
+                        right: '4%',
+                        bottom: '3%',
+                        containLabel: true
+                    },
+                    xAxis : [
+                        {
+                            type : 'category',
+                            data : ['[0,10)', '[10,20)', '[20,30)', '[30,40)', '[40,50)', '[50,60)', '[60,70)','[70,80)','[80,90)','[90,100]'],
+                            axisTick: {
+                                alignWithLabel: true
+                            }
+                        }
+                    ],
+                    yAxis : [
+                        {
+                            type : 'value'
+                        }
+                    ],
+                    series : [
+                        {
+                            name:'人数',
+                            type:'bar',
+                            barWidth: '60%',
+                            data:renshu
+                        }
+                    ]
+                };
+                // 使用刚指定的配置项和数据显示图表。
+                myChart.setOption(option);
+            }
+        });
+    }
 
     function getItemNandu(source) {
 
