commit by lewy 5/11

--- a/src/main/resources/templates/commons/bar.html
+++ b/src/main/resources/templates/commons/bar.html
@@ -33,6 +33,16 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="#" th:class="${activeUri=='papers'?'nav-link active':'nav-link'}"
+                   href="#" th:href="@{/papers}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file">
+                        <path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path>
+                        <polyline points="13 2 13 9 20 9"></polyline>
+                    </svg>
+                    我的试卷
+                </a>
+            </li>
+            <li class="nav-item">
                 <a class="#" th:class="${activeUri=='submissions'?'nav-link active':'nav-link'}"
                    href="#" th:href="@{/submissions}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users">
@@ -41,20 +51,9 @@
                         <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
                         <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
                     </svg>
-                    我的试卷
+                    我的提交
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link"
-                   href="http://getbootstrap.com/docs/4.0/examples/dashboard/#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file">
-                        <path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path>
-                        <polyline points="13 2 13 9 20 9"></polyline>
-                    </svg>
-                    我的订单
-                </a>
-            </li>
-
             <li class="nav-item">
                 <a class="nav-link" href="http://getbootstrap.com/docs/4.0/examples/dashboard/#">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2">
@@ -62,7 +61,7 @@
                         <line x1="12" y1="20" x2="12" y2="4"></line>
                         <line x1="6" y1="20" x2="6" y2="14"></line>
                     </svg>
-                    我的钱包
+                    我的订单
                 </a>
             </li>
             <li class="nav-item">
@@ -72,11 +71,10 @@
                         <polyline points="2 17 12 22 22 17"></polyline>
                         <polyline points="2 12 12 17 22 12"></polyline>
                     </svg>
-                    我的账号
+                    我的钱包
                 </a>
             </li>
         </ul>
-
 
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
             <span>Saved reports</span>
