--- a/src/main/resources/templates/item/index.html
+++ b/src/main/resources/templates/item/index.html
@@ -138,6 +138,7 @@
             type: 'get',
             dataType: 'text',
             url: '/iaw/item/totalScore',
+            //url: '/packmas-web/item/totalScore',
             data: source,
             cache: false,
             async: true,
@@ -208,6 +209,7 @@
             type: 'get',
             dataType: 'text',
             url: '/iaw/item/nandu',
+            //url: '/packmas-web/item/nandu',
             data: source,
             cache: false,
             async: true,
@@ -282,6 +284,7 @@
             type: 'get',
             dataType: 'text',
             url: '/iaw/item/qufendu',
+            //url: '/packmas-web/item/qufendu',
             data: source,
             cache: false,
             async: true,
