--- a/src/main/resources/templates/paper/list.html
+++ b/src/main/resources/templates/paper/list.html
@@ -22,7 +22,8 @@
         <!--<div th:replace="commons/bar::sidebar"></div>-->
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-            <h2><a class="btn btn-sm btn-success" href="paper" th:href="@{/paper}">试卷添加</a></h2>
+            <h2>这是您已创建的试卷</h2>
+            <h2><a class="btn btn-sm btn-success" href="#" th:href="@{/paper}">创建新试卷</a></h2>
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
                     <thead>
@@ -45,21 +46,23 @@
                         <td th:text="${paper.paperAffiliate}"></td>
                         <td th:text="${paper.paperTesttime}"></td>
                         <td>
-                            <!--<a class="btn btn-sm btn-primary" th:href="@{/emp/}+${emp.id}">编辑</a>-->
-                            <a class="btn btn-sm btn-primary">查看</a>
-                            <!--<button th:attr="del_uri=@{/emp/}+${emp.id}" class="btn btn-sm btn-danger deleteBtn">删除</button>-->
-                            <button class="btn btn-sm btn-danger deleteBtn">删除</button>
+                            <a class="btn btn-sm btn-primary" th:href="@{/paper/}+${paper.id}">编辑</a>
+                            <!--<a class="btn btn-sm btn-primary">查看</a>-->
+                            <button th:attr="del_uri=@{/paper/}+${paper.id}" class="btn btn-sm btn-danger deleteBtn">
+                                删除
+                            </button>
+                            <!--<button class="btn btn-sm btn-danger deleteBtn">删除</button>-->
                         </td>
                     </tr>
                     </tbody>
                 </table>
             </div>
         </main>
-        <!--
-        <form id="deleteEmpForm"  method="post">
+
+        <form id="deletePaperForm" method="post">
             <input type="hidden" name="_method" value="delete"/>
         </form>
-        -->
+
     </div>
 </div>
 
@@ -75,14 +78,14 @@
 <script>
     feather.replace()
 </script>
-<!--
 <script>
-    $(".deleteBtn").click(function(){
-        //删除当前员工
-        $("#deleteEmpForm").attr("action",$(this).attr("del_uri")).submit();
+    $(".deleteBtn").click(function () {
+        //删除当前试卷
+        if (confirm("确定要删除吗？")) {
+           $("#deletePaperForm").attr("action", $(this).attr("del_uri")).submit();
+        }
         return false;
     });
 </script>
--->
 </body>
 </html>
