--- a/src/main/resources/templates/paper/add.html
+++ b/src/main/resources/templates/paper/add.html
@@ -14,19 +14,19 @@
 <body>
 <!--引入抽取的topbar-->
 <!--模板名：会使用thymeleaf的前后缀配置规则进行解析-->
-<div th:replace="commons/bar::topbar"></div>
+<div th:replace="include/bar::topbar"></div>
 
 <div class="container-fluid">
     <div class="row">
         <!--引入侧边栏-->
-        <div th:replace="commons/bar::sidebar(activeUri='papers')"></div>
+        <div th:replace="include/bar::sidebar(activeUri='papers')"></div>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
             <h2>请在此填写试卷信息</h2>
             <br/>
-            <!--需要区分是员工修改还是添加；-->
+            <!--需要区分是修改还是添加；-->
             <form th:action="@{/paper}" method="post">
-                <!--发送put请求修改员工数据-->
+                <!--发送put请求修改数据-->
                 <!--
                 解决有的浏览器不支持put和delete请求的方法：
                 1、SpringMVC中配置HiddenHttpMethodFilter;（SpringBoot自动配置好的）
