--- a/src/main/resources/templates/paper/list.html
+++ b/src/main/resources/templates/paper/list.html
@@ -13,12 +13,12 @@
 <body>
 <!--引入抽取的topbar-->
 <!--模板名：会使用thymeleaf的前后缀配置规则进行解析-->
-<div th:replace="commons/bar::topbar"></div>
+<div th:replace="include/bar::topbar"></div>
 
 <div class="container-fluid">
     <div class="row">
         <!--引入侧边栏-->
-        <div th:replace="commons/bar::sidebar(activeUri='papers')"></div>
+        <div th:replace="include/bar::sidebar(activeUri='papers')"></div>
         <!--<div th:replace="commons/bar::sidebar"></div>-->
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
