--- a/src/main/resources/templates/item/index.html
+++ b/src/main/resources/templates/item/index.html
@@ -137,8 +137,8 @@
         $.ajax({
             type: 'get',
             dataType: 'text',
-            url: '/iaw/item/totalScore',
-            //url: '/packmas-web/item/totalScore',
+            //url: '/iaw/item/totalScore',
+            url: '/packmas-web/item/totalScore',
             data: source,
             cache: true, //打开缓存
             async: true,
@@ -208,8 +208,8 @@
         $.ajax({
             type: 'get',
             dataType: 'text',
-            url: '/iaw/item/nandu',
-            //url: '/packmas-web/item/nandu',
+            //url: '/iaw/item/nandu',
+            url: '/packmas-web/item/nandu',
             data: source,
             cache: true,
             async: true,
@@ -283,8 +283,8 @@
         $.ajax({
             type: 'get',
             dataType: 'text',
-            url: '/iaw/item/qufendu',
-            //url: '/packmas-web/item/qufendu',
+            //url: '/iaw/item/qufendu',
+            url: '/packmas-web/item/qufendu',
             data: source,
             cache: true,
             async: true,
