--- a/src/main/resources/templates/submission/list.html
+++ b/src/main/resources/templates/submission/list.html
@@ -46,8 +46,9 @@
                         <td th:text="${#dates.format(new java.util.Date(new Long(sbm.submitTime)),'yyyy-MM-dd HH:mm:ss')}"></td>
                         <td>未处理</td>
                         <td>
-                            <!--<a class="btn btn-sm btn-primary" th:href="@{/emp/}+${emp.id}">编辑</a>-->
-                            <a class="btn btn-sm btn-info text-white">开始分析</a>
+                            <input type="hidden" th:value="${sbm.id}"/>
+                            <!--<a class="btn btn-sm btn-info text-white" href="javascript:void(0);" id="analyseBtn">开始分析</a>-->
+                            <button class="btn btn-sm btn-info analyseBtn">开始分析</button>
                             <button th:attr="del_uri=@{/submission/}+${sbm.id}" class="btn btn-sm btn-danger deleteBtn">
                                 删除
                             </button>
@@ -84,7 +85,6 @@
                         <td th:text="${#dates.format(new java.util.Date(new Long(sbm.submitTime)),'yyyy-MM-dd HH:mm:ss')}"></td>
                         <td>已处理</td>
                         <td>
-                            <!--<a class="btn btn-sm btn-primary" th:href="@{/emp/}+${emp.id}">编辑</a>-->
                             <a class="btn btn-sm btn-success text-white" th:href="@{/submission/}+${sbm.id}">查看详情</a>
                             <button th:attr="del_uri=@{/submission/}+${sbm.id}" class="btn btn-sm btn-danger deleteBtn">
                                 删除
@@ -125,6 +125,31 @@
     feather.replace()
 </script>
 <script>
+    $(".analyseBtn").click(function () {
+        //获取未处理的记录的id
+        var narId = $(this).prev().val();
+        console.log(narId);
+        var source = {"analysisId":narId};
+
+        $.ajax({
+            type: 'get',
+            dataType: 'json',
+            //url: '/iaw/submission/analysis',
+            url: '/packmas-web/submission/analysis',
+            data: source,
+            cache: false,
+            async: true,
+            success: function (result) {
+                console.log(result);
+                if (result.status == "0") {
+                    alert(result.message);
+                } else {
+                    alert(result.message);
+                }
+            }
+        })
+    });
+
     $(".deleteBtn").click(function () {
         //删除当前试卷
         if (confirm("确定要删除吗？")) {
