--- a/src/main/resources/templates/submission/list.html
+++ b/src/main/resources/templates/submission/list.html
@@ -143,6 +143,7 @@
                 console.log(result);
                 if (result.status == "0") {
                     alert(result.message);
+                    location.reload(true);
                 } else {
                     alert(result.message);
                 }
